@startuml
'https://plantuml.com/class-diagram

Location <|-- GameObject
Location <|-- IHaveInventory

interface IHaveInventory

abstract GameObject

class Location <<GameObject, IHaveInventory>> {
	- _items Inventory
	+ Location(string[] ids, string name, string desc)
	+ Locate(string id)

	__ getter __
	+ Name
	+ FullDescription
	+ Items
}

@enduml
